--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
      font-size:45px;
      text-align: center;
      border-bottom:1px solid gray;
+     background-color:pink;
      margin:0;
      padding:20px;
 }
